# my-k8s

./: Cargo.toml  NOTE.md
.devcontainer/: devcontainer.json
manifests/active/: sidecar.yml
manifests/examples/: replicaset.yml  web.yml
scripts/: clean-state.sh  myctl.sh  prepare-bundle.sh  prepare-rootfs.sh
src/: apiserver.rs  client.rs  controller.rs  endpoints.rs  ipam.rs  kube_proxy.rs  lib.rs  meta.rs  node.rs  pod.rs  raft.rs  reconciler.rs  replicaset.rs  runtime.rs  scheduler.rs  service.rs  store.rs  watcher.rs
src/apiserver/: applier.rs  command.rs  handlers.rs  raft_glue.rs  routes.rs  storage.rs  watch.rs
src/controller/: endpoints.rs  endpoints_manager.rs  manager.rs  replicaset.rs  workqueue.rs
src/raft/: core.rs  log.rs  message.rs  node.rs  sim_tests.rs  storage.rs  transport.rs
src/runtime/: bundle.rs  sandbox.rs  youki.rs
