[package]
name = "my-k8s"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
libcontainer = "0.6.0"
oci-spec = "0.9.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"
serde_json = "1"
axum = "0.7"
sled = "0.34"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = "0.1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
